@@ -14,7 +14,7 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align="right"><h5>Last update 23-Feb-2004</h5></div>
+<div align="right"><h5>Last update 14-Oct-2007</h5></div>
 <div align="center"><H1>MBSE BBS Setup - Mail Setup -> Mail Areas.</H1></div>
 
 <H3>Introduction.</H3>
@@ -47,7 +47,7 @@ change netmail reply board and delete message area.
 <strong>QWK name    </strong>The name of the area for OffLine Readers.
 <strong>Distrib.    </strong>Leave this blank for now!
 <strong>Area Type   </strong>Local, Netmail, Echomail or News.
-<strong>Msg Kinds   </strong>Private/Public, Private, Public, Read Only, FTN moderated, Usenet Moderated
+<strong>Msg Kinds   </strong>Private/Public, Private, Public, Read Only.
 <strong>Charset     </strong>Default characterset for the area
 <strong>Active      </strong>If this area is active.
 <strong>Days Old    </strong>The maximum age of the messages before purging.
